--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
         </style>-->
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Projeto de Programação 3º ano</title> <!--define o título que aparece na aba do seu navegador-->
+        <title>Projeto de Programação 3º ano</title> <!--física-->
         <link rel="stylesheet" href="style.css"> <!--linkar o arquivo css ao nosso arquivo HTML-->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Kode+Mono:wght@400..700&display=swap" rel="stylesheet">  
     </head>
-    <body> <!--dentro do body que escrevemos tudo que deve aparecer na página-->
+    <body> <!---->Física é uma ciência voltada ao estudo dos fenômenos naturais, baseando-se em teorias e por meio da observação e experimentação. A palavra Física tem origem grega (“physis”) e significa natureza. A disciplina estuda, portanto, a natureza, as propriedades da matéria e as forças naturais.
         <!--class define classes para editar no arquivo CSS-->
       <section class="conteudo-principal"></section> <!--define uma seção no documento-->
       <h2 class="titulo-principal">Blablablabla<span>_</span></h2> <!--h2 é um tamanho de fonte, como um subtitulo-->
