--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
         <script src="main.js"></script> <!--cria um espaço para encorporar o arquivo JavaScript no nosso documento HTML-->
         <div class="abas-textos"> <!--div para dividir os textos em cada botão-->
             <div class="aba-conteudo"> <!--o que aparecerá quando clicar no botão 1-->
-                <h3 class="aba-conteudo-titulo-principal">Estudar 4 cursos na Alura</h3>
-                <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                <h3 class="aba-conteudo-titulo-principal"> Fazer fíica na UEL </h3>
+                <h4 class="aba-conteudo-titulo-secundario">  </h4>
             </div>
             <div class="aba-conteudo"><!--o que aparecerá quando clicar no botão 2-->
-                <h3 class="aba-conteudo-titulo-principal">Criar 5 projetos em JavaScript</h3>
-                <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                <h3 class="aba-conteudo-titulo-principal"> nota necesária para passar em física </h3>
+                <h4 class="aba-conteudo-titulo-secundario"></h4>Saiba qual é a pontuação necessária para ingressar no curso de Física. A variação foi grande, com a maior nota de corte ficando acima dos 740 e a menor abaixo dos 400 pontos.
             </div>
             <div class="aba-conteudo"><!--o que aparecerá quando clicar no botão 3-->
                 <h3 class="aba-conteudo-titulo-principal">Criar um portifólio com meus 3 melhores projetos</h3>
