--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Kode+Mono:wght@400..700&display=swap" rel="stylesheet">  
     </head>
-    <body> <!---->Física é uma ciência voltada ao estudo dos fenômenos naturais, baseando-se em teorias e por meio da observação e experimentação. A palavra Física tem origem grega (“physis”) e significa natureza. A disciplina estuda, portanto, a natureza, as propriedades da matéria e as forças naturais.
-        <!--class define classes para editar no arquivo CSS-->
+    <body> <!---->
       <section class="conteudo-principal"></section> <!--define uma seção no documento-->
       <h2 class="titulo-principal">Blablablabla<span>_</span></h2> <!--h2 é um tamanho de fonte, como um subtitulo-->
       <div class="conteudo">
@@ -29,7 +28,8 @@
         <div class="abas-textos"> <!--div para dividir os textos em cada botão-->
             <div class="aba-conteudo"> <!--o que aparecerá quando clicar no botão 1-->
                 <h3 class="aba-conteudo-titulo-principal"> Fazer fíica na UEL </h3>
-                <h4 class="aba-conteudo-titulo-secundario">  </h4>
+                <h4 class="aba-conteudo-titulo-secundario"> Física é uma ciência voltada ao estudo dos fenômenos naturais, baseando-se em teorias e por meio da observação e experimentação. A palavra Física tem origem grega (“physis”) e significa natureza. A disciplina estuda, portanto, a natureza, as propriedades da matéria e as forças naturais.
+             </h4>
             </div>
             <div class="aba-conteudo"><!--o que aparecerá quando clicar no botão 2-->
                 <h3 class="aba-conteudo-titulo-principal"> nota necesária para passar em física </h3>
