--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     </head>
     <body> <!---->
       <section class="conteudo-principal"></section> <!--define uma seção no documento-->
-      <h2 class="titulo-principal">Blablablabla<span>_</span></h2> <!--h2 é um tamanho de fonte, como um subtitulo-->
+      <h2 class="titulo-principal"> Fíica <span>_</span></h2> <!--h2 é um tamanho de fonte, como um subtitulo-->
       <div class="conteudo">
       <div class="botoes"> <!--div cria um bloco genérico para agrupar conteúdos-->
-        <button class="botao ativo">Botão 1</button> <!--button cria botoes-->
-        <button class="botao">Botão 2</button>
-        <button class="botao">Botão 3</button>
-        <button class="botao">Botão 4</button>
+        <button class="botao ativo"> o que é a fíica ? </button> <!--button cria botoes-->
+        <button class="botao"> Nota para passar </button>
+        <button class="botao"> A fìsica na UEL </button>
+        <button class="botao"> Tempo de curso </button>
         </div>
         
         <div class="abas-textos"> <!--div para dividir os textos em cada botão-->
