--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <h2 class="titulo-principal"> Fíica <span>_</span></h2> <!--h2 é um tamanho de fonte, como um subtitulo-->
       <div class="conteudo">
       <div class="botoes"> <!--div cria um bloco genérico para agrupar conteúdos-->
-        <button class="botao ativo"> o que é a fíica ? </button> <!--button cria botoes-->
+        <button class="botao ativo"> o que é a física ? </button> <!--button cria botoes-->
         <button class="botao"> Nota para passar </button>
         <button class="botao"> A fìsica na UEL </button>
         <button class="botao"> Tempo de curso </button>
@@ -32,16 +32,16 @@
              </h4>
             </div>
             <div class="aba-conteudo"><!--o que aparecerá quando clicar no botão 2-->
-                <h3 class="aba-conteudo-titulo-principal"> nota necesária para passar em física </h3>
+                <h3 class="aba-conteudo-titulo-principal"> Nota necesária para passar em física </h3>
                 <h4 class="aba-conteudo-titulo-secundario"></h4>Saiba qual é a pontuação necessária para ingressar no curso de Física. A variação foi grande, com a maior nota de corte ficando acima dos 740 e a menor abaixo dos 400 pontos.
             </div>
             <div class="aba-conteudo"><!--o que aparecerá quando clicar no botão 3-->
-                <h3 class="aba-conteudo-titulo-principal">Criar um portifólio com meus 3 melhores projetos</h3>
-                <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                <h3 class="aba-conteudo-titulo-principal"> Como é avaliando ?</h3>
+                <h4 class="aba-conteudo-titulo-secundario"> Importante: a prova de física da UEL não envolve apenas cálculos. Uma parte do exame traz questões conceituais, por isso, é recomendável estudar e entender bem os conceitos da física. Se sobrar tempo, você também pode estudar ondas e, em eletricidade, resistores e potências.</h4>
             </div>
             <div class="aba-conteudo"><!--o que aparecerá quando clicar no botão 4-->
-                <h3 class="aba-conteudo-titulo-principal">Atualizar meu currículo com meus certificados da Alura</h3>
-                <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                <h3 class="aba-conteudo-titulo-principal"> Quantos anos? </h3>
+                <h4 class="aba-conteudo-titulo-secundario"> O curso de Física, deve ter uma duração típica de 4 anos, sendo o tempo mínimo e máximo de integralização de 3 e 6 anos, respectivamente. As diferentes sequências do Bacharelado e da Licenciatura podem ou não ser cursados de forma contínua, sem interrupção.</h4>
             </div>
         </div>
       </div>
